<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/s_bg"
    tools:context=".Activity.InputIPActivity">

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请输入服务器IP"
        android:textStyle="bold"
        android:textSize="45sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/et_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="33dp"
        android:textColor="@color/colorBlack"
        android:background="@mipmap/s_edittext_bg"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_notice"
        android:layout_marginTop="67dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/s_hint"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="提示："
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorOrange"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_title_1"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/s_return"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_title_2"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_title_3"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_title_4"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</RelativeLayout>