<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/s_bg"
    tools:context=".Activity.SetNetParamsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_check_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/text_title"
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/local_business_set" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="200dp"
        android:layout_marginTop="100dp">

        <RelativeLayout
            android:id="@+id/service_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_service_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:background="@mipmap/s_edittext_bg_small"
                android:digits="0123456789."
                android:gravity="center"
                android:inputType="number"
                android:maxLength="15"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="25sp" />

            <TextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/et_service_ip"
                android:text="@string/set_net_parameter_1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/service_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/service_ip"
            android:layout_below="@id/service_ip"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_service_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:background="@mipmap/s_edittext_bg_small"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="5"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="25sp" />

            <TextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/et_service_port"
                android:text="@string/set_net_parameter_2" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/local_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/service_port"
            android:layout_below="@id/service_port"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_local_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:background="@mipmap/s_edittext_bg_small"
                android:digits="0123456789."
                android:gravity="center"
                android:inputType="number"
                android:maxLength="15"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="25sp" />

            <TextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/et_local_ip"
                android:text="@string/set_net_parameter_3" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/zwym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/local_ip"
            android:layout_below="@id/local_ip"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_zwym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:background="@mipmap/s_edittext_bg_small"
                android:digits="0123456789."
                android:gravity="center"
                android:inputType="number"
                android:maxLength="15"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="25sp" />

            <TextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/et_zwym"
                android:text="@string/set_net_parameter_4" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mrwg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/zwym"
            android:layout_below="@id/zwym"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_mrwg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:background="@mipmap/s_edittext_bg_small"
                android:digits="0123456789."
                android:gravity="center"
                android:inputType="number"
                android:maxLength="15"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="25sp" />

            <TextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/et_mrwg"
                android:text="@string/set_net_parameter_5" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/mrwg"
            android:layout_below="@id/mrwg"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_dns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:background="@mipmap/s_edittext_bg_small"
                android:digits="0123456789."
                android:gravity="center"
                android:inputType="number"
                android:maxLength="15"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="25sp" />

            <TextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/et_dns"
                android:text="@string/set_net_parameter_6" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/s_hint"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="提示："
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorOrange"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_title_1"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/s_return"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_title_2"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_title_3"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_title_4"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</RelativeLayout>